# gnurocket

./: .travis.yml  CMakeLists.txt  README  README.md  sync_player.vcproj
editor/: clientsocket.cpp  clientsocket.h  editor.cpp  editor.pro  editor.pro.shared  mainwindow.cpp  mainwindow.h  syncdocument.cpp  syncdocument.h  synctrack.h  trackview.cpp  trackview.h
example_sdl/: CMakeLists.txt  example_sdl.c
lib/: base.h  data.c  data.h  device.c  device.h  sync.h  track.c  track.h
qt-editor/: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QtRocket.pro  ServerWrapper.cpp  ServerWrapper.h  SyncTrack.cpp  SyncTrack.h  TrackModel.cpp  TrackModel.h  TrackView.cpp  TrackView.h  clientsocket.cpp  clientsocket.h  editor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  multitrackview.cpp  multitrackview.h  qt-editor.pro  qt-editor.vcproj  rownumberview.cpp  rownumberview.h  track.h  trackarea.cpp  trackarea.h  trackgroup.cpp  trackgroup.h  trackgroupnameview.cpp  trackgroupnameview.h  trackgroupview.cpp  trackgroupview.h  trackview.cpp  trackview.h
scripts/: compile.sh
sync/: CMakeLists.txt  base.h  device.c
usync/: example.c  usync.c  usync.h
